--- a/cool_queues/CMakeLists.txt
+++ b/cool_queues/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_library(cool_queues INTERFACE
-  cool_queues.hpp)
+add_library(cool_queues STATIC
+  cool_queues.hpp cool_queues.cpp
+)
 
 target_include_directories(cool_queues INTERFACE ..)
+target_link_libraries(cool_queues fmt::fmt)
