Hello world example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,8 @@
+add_executable(cool_queues_hello_world_example
+  hello_world.cpp)
+
+target_link_libraries(cool_queues_hello_world_example cool_queues)
+
 add_executable(cool_queues_spmc_example
   spmc.cpp)
 
